# data_service

./: .gitignore  README.md  alembic.ini  config.py  pyproject.toml  pytest.ini
app/: database.py  main.py
app/api/: __init__.py  access.py  quize.py  user.py
app/html/: __init__.py  users.py
app/middleware/: api_key_checker.py
app/migrations/: env.py
app/migrations/versions/: 2024_01_30_1342_initial_migration.py
app/models/: __init__.py  answers.py  api_keys.py  courses.py  groups.py  questionnaires.py  questions.py  user_attempts.py  users.py
app/repositories/: abstract_repos.py
app/repositories/sqlalchlemy_repos/: __init__.py  answers.py  api_keys.py  base.py  groups.py  lessons.py  questionnaires.py  questions.py  user_attempts.py  users.py
app/schemas/: answers.py  question.py  question_attempt.py
app/services/: __init__.py  apikey.py  courses.py  question_service.py  quizzes.py  user_attempt.py  users.py
app/templates/: create_course.html  create_lesson.html  create_question.html  list_courses.html
app/utils/: unitofwork.py  uow.py
app/views/: __init__.py  course.py  queizzes.py  question.py  users.py
dataaccess/: database.py
dataaccess/migrations/: env.py
dataaccess/models/: __init__.py  answers.py  fsm_data.py  groups.py  lessons.py  questionnaires.py  questions.py  user_attempts.py  users.py
dataaccess/repositories/: abstract_repos.py
dataaccess/services/: __init__.py  fsm_data.py  question_service.py  quizzes.py  users.py
dataaccess/utils/: unitofwork.py
tests/: conftest.py
tests/dataaccess_tests/: test_list1_test.py
(+11 files in other folders)
